@@ -13,13 +13,11 @@ import org.junit.jupiter.params.provider.MethodSource;
 import uk.gov.hmcts.civil.taskconfiguration.DmnDecisionTable;
 import uk.gov.hmcts.civil.taskconfiguration.DmnDecisionTableBaseUnitTest;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 
 import static java.util.Arrays.asList;
-import static java.util.Collections.emptyList;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
@@ -43,7 +41,6 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                     Map.of(
                         "completionMode", "Auto"
                     )
-
                 )
             ),
             Arguments.of(
@@ -55,7 +52,6 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                     Map.of(
                         "completionMode", "Auto"
                     )
-
                 )
             )
         );
@@ -64,7 +60,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
     static Stream<Arguments> scenarioProviderSdo() {
         return Stream.of(
             Arguments.of(
-                "VIEW_AND_RESPOND_TO_DEFENCE",
+                "CREATE_SDO",
                 asList(
                     Map.of(
                         "taskType", "FastTrackDirections",
@@ -75,46 +71,114 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "completionMode", "Auto"
                     ),
                     Map.of(
-                        "taskType", "LegalAdviserSmallClaimsTrackDirections",
+                        "taskType", "LegalAdvisorSmallClaimsTrackDirections",
                         "completionMode", "Auto"
                     ),
-                    Collections.emptyMap()
-
+                    Map.of(
+                        "taskType", "SmallClaimsTrackDirectionsReferral",
+                        "completionMode", "Auto"
+                    ),
+                    Map.of(
+                        "completionMode", "Auto"
+                    )
                 )
             ),
             Arguments.of(
-                "DrawDirectionsOrderJudge",
+                "NotSuitable_SDO",
                 asList(
                     Map.of(
-                        "taskType", "ScheduleAHearing",
+                        "taskType", "FastTrackDirections",
                         "completionMode", "Auto"
                     ),
-                    Collections.emptyMap()
+                    Map.of(
+                        "taskType", "SmallClaimsTrackDirections",
+                        "completionMode", "Auto"
+                    ),
+                    Map.of(
+                        "taskType", "SmallClaimsTrackDirectionsReferral",
+                        "completionMode", "Auto"
+                    )
                 )
             ),
             Arguments.of(
                 "REFER_TO_JUDGE",
                 asList(
                     Map.of(
+                        "taskType", "LegalAdvisorSmallClaimsTrackDirections",
+                        "completionMode", "Auto"
+                    ),
+                    Map.of(
                         "taskType", "SmallClaimsTrackDirectionsReferral",
                         "completionMode", "Auto"
                     ),
-                    Collections.emptyMap()
+                    Map.of(
+                        "completionMode", "Auto"
+                    )
                 )
             ),
             Arguments.of(
-                "unknownEvent",
-                emptyList()
+                "CLAIMANT_RESPONSE",
+                asList(
+                    Map.of(
+                        "completionMode", "Auto"
+                    )
+                )
+            ),
+            Arguments.of(
+                "CLAIMANT_RESPONSE_SPEC",
+                asList(
+                    Map.of(
+                        "completionMode", "Auto"
+                    )
+                )
+            )
+        );
+    }
+
+    static Stream<Arguments> scenarioProviderCP() {
+        return Stream.of(
+            Arguments.of(
+                "ADD_CASE_NOTE",
+                asList(
+                    Map.of(
+                        "taskType", "removeHearing",
+                        "completionMode", "Auto"
+                    ),
+                    Map.of(
+                        "taskType", "preHearingContact",
+                        "completionMode", "Auto"
+                    )
+                )
+            ),
+            Arguments.of(
+                "HEARING_SCHEDULED",
+                asList(
+                    Map.of(
+                        "taskType", "adjournedReList",
+                        "completionMode", "Auto"
+                    )
+                )
             )
         );
     }
 
     @ParameterizedTest(name = "event id: {0}")
-    @MethodSource({"scenarioProvider"})
+    @MethodSource({"scenarioProvider",  "scenarioProviderCP"})
     void given_event_ids_should_evaluate_dmn(String eventId, List<Map<String, String>> expectation) {
 
         VariableMap inputVariables = new VariableMapImpl();
         inputVariables.putValue("eventId", eventId);
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+        MatcherAssert.assertThat(dmnDecisionTableResult.getResultList(), is(expectation));
+    }
+
+    @ParameterizedTest(name = "event id: {0}")
+    @MethodSource({"scenarioProviderSdo"})
+    void given_event_ids_should_evaluate_sdo_dmn(String eventId, List<Map<String, String>> expectation) {
+
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue("eventId", eventId);
+        System.out.println(eventId);
         DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
         MatcherAssert.assertThat(dmnDecisionTableResult.getResultList(), is(expectation));
     }
@@ -124,7 +188,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
 
         //The purpose of this test is to prevent adding new rows without being tested
         DmnDecisionTableImpl logic = (DmnDecisionTableImpl) decision.getDecisionLogic();
-        assertThat(logic.getRules().size(), is(10));
+        assertThat(logic.getRules().size(), is(13));
 
     }
 
